Mon, 02 Apr 2007 10:49:44 +0200 Dodji Seketeli

	* configure.ac: added a --enable-debug to compile in debug mode
	* gtksourceview/src/sourceiter.ccg:
	  SourceIter::SourceIter(const SourceIter &): chain up Gtk::TextIter
	  constructor.
	* tests/test-mime-types.cpp: fix a dump compiler warning
	* tests/test-search.cpp:
	  SearchDialog::backward_search_requested_signal(): fix a
	  a silly crasher.

Mon, 26 Mar 2007 19:50:31 +0200 Dodji Seketeli

	* configure.ac: bumped version name to 0.3.1

Sun, 21 Jan 2007 16:43:39 +0100 Dodji Seketeli

	* docs/reference/reference-index.txt: updated mailing list information
	  on the website
	* gtksourceview/gtksourceviewmm/init.cc: call Glib::init() in the
	  init function so that people can call gtksourceview::init() only
	  when they need to use non graphical stuff.
	* tests/test-mime-types.cpp: added this test case to make
	  sure mime type related stuff works.

================== 0.3.0 release =============================

Sun, 21 Jan 2007 12:22:02 +0100 Dodji Seketeli

	* docs/reference/Doxyfile.in: generate doc files in builddir, not
	  srcdir.
	* docs/reference/Makefile.am: remove the doxygen-warning.txt
	  at dist-clean time.
	* NEWS: update this to prepare 0.3

Sat, 20 Jan 2007 18:37:25 +0100 Dodji Seketeli

	* gtksourceview/src/sourcebuffer.hg, docs/reference/reference-index.txt:
	  remove the main page doc from sourcebuffer.hg and put it in
	  doc/reference/reference-index.txt
	* docs/reference/Doxyfile.in, docs/reference/Makefile.am:
	  change this accordingly.

Sun, 14 Jan 2007 11:28:25 +0100 Dodji Seketeli

	*  gtksourceview/src/sourceview.hg: updated API docs.
	*  NEWS: updated this

Fri, 22 Dec 2006 23:46:21 +0100 Dodji Seketeli

	* gtksourceview/gtksourceviewmm.h: updated this to include all the *.h
	  files of gsvmm.
	* gtksourceview/src/sourceiter.ccg,hg: wrapped the SourceIter class.
	* tests/test-search.cpp: added a test for the search api.
	* tests/test-basic.cpp: udpated this to include <gtksourceviewmm.h>