@@ -1,4 +1,7 @@
-noinst_PROGRAMS=runtestbasic runtestlangs runtestsearch runtestmimetypes
+noinst_PROGRAMS=\
+runtestbasic runtestlangs \
+runtestsearch runtestmimetypes \
+runtestgetbuffer
 
 runtestbasic_SOURCES=test-basic.cpp
 runtestbasic_LDFLAGS=@GTKSOURCEVIEWMM_LIBS@
@@ -11,6 +14,9 @@ runtestsearch_LDFLAGS=@GTKSOURCEVIEWMM_LIBS@
 
 runtestmimetypes_SOURCES=test-mime-types.cpp
 runtestmimetypes_LDFLAGS=@GTKSOURCEVIEWMM_LIBS@
+
+runtestgetbuffer_SOURCES=test-get-buffer.cpp
+runtestgetbuffer_LDFLAGS=@GTKSOURCEVIEWMM_LIBS@
 
 INCLUDES=-I$(top_srcdir) -I$(top_srcdir)/gtksourceview \
 @GTKSOURCEVIEWMM_CFLAGS@
