@@ -1,3 +1,8 @@
+Mon, 02 Apr 2007 11:03:32 +0200 Dodji Seketeli
+
+	* tests/Makefile.am, test/test-get-buffer.cc:
+	  Added a new test case test-get-buffer.cc.
+
 Mon, 02 Apr 2007 10:49:44 +0200 Dodji Seketeli
 
 	* configure.ac: added a --enable-debug to compile in debug mode
